--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -3,11 +3,11 @@
     <div class="container  pt-3 banner">
         <div class="row">
 
-            <div class="col-xl-9 col-lg-8 col-8 mx-auto pt-5 pe-3">
-                <h1 id="styled-title" class="text-center">{{ .Params.Subtitle }}</h1>
+            <div class="col-xl-9 col-lg-8 col-12 mx-auto pt-md-5">
+                <h1 id="styled-title" class="text-md-center">{{ .Params.Subtitle }}</h1>
             </div>
-            <div class="col-xl-8 col-lg-6 col-6 mx-auto pt-3">
-                <p class="text-center desc">{{ .Params.Description }}</p>
+            <div class="col-xl-8 col-lg-6 col-12 mx-auto pt-3">
+                <p class="text-md-center desc">{{ .Params.Description }}</p>
             </div>
             <div class="col-xl-12 col-lg-12 col-12">
                 {{ partial "filter-form.html" . }}
