--- a/layouts/partials/filter-form.html
+++ b/layouts/partials/filter-form.html
@@ -1,6 +1,6 @@
-<form class="form-filter py-5">
-  <div class="form-row d-flex">
-    <div class="form-group d-flex flex-column px-3 col-md-5">
+<form class="form-filter py-md-5">
+  <div class="form-row d-flex flex-wrap">
+    <div class="form-group d-flex flex-column gap-1 px-md-3  my-3 col-md-5 col-12">
       <label for="country">Country:</label>
       <select class="px-2" id="country" name="country">
         <option>Select Country</option>
@@ -258,30 +258,30 @@
         <option value="ZW">Zimbabwe</option>
       </select>
     </div>
-    <div class="form-group d-flex flex-column px-3 col-md-5">
+    <div class="form-group d-flex flex-column gap-1 px-md-3 my-3 col-md-5 col-12">
       <label for="url">URL:</label>
-      <input class="px-2" type="text" id="url" name="url">
+      <input class="px-2" type="text" id="url" name="url" placeholder="Enter the social media content URL">
     </div>
-    <div class="form-group d-flex flex-column justify-content-end px-3 col-md-2">
+    <div class="form-group d-flex flex-column justify-content-end my-3 px-md-3 col-md-2 col-12">
       <input type="submit" value="Start Test">
     </div>
   </div>
 
-  <div class="form-row d-flex px-3 py-1">
+  <div class="form-row d-flex px-md-3 py-1">
     <details class="col-12">
       <summary class="py-2">Advanced Options</summary>
-      <div class="form-row d-flex">
-        <div class="form-group col-md-4 d-flex flex-column">
+      <div class="form-row d-flex flex-wrap gap-md-0 gap-3">
+        <div class="form-group col-md-4 col-12 d-flex flex-column gap-1">
           <label for=" tags">Tags:</label>
           <input class="px-3" type="text" id="tags" name="tags" placeholder="Enter a tag you want to search for">
         </div>
-        <div class="form-group form-group-checkbox col-md-4 d-flex align-items-baseline">
+        <div class="form-group form-group-checkbox col-md-4 col-12 d-flex align-items-baseline">
           <input type="checkbox" id="checkbox1" name="checkbox1">
           <label for="checkbox1">Check this feature<br>
             <p>A a short description of this feature goes here</p>
           </label>
         </div>
-        <div class="form-group form-group-checkbox col-md-4 d-flex align-items-baseline">
+        <div class="form-group form-group-checkbox col-md-4 col-12 d-flex align-items-baseline">
           <input type="checkbox" id="checkbox2" name="checkbox2">
           <label for="checkbox2">Check this feature</br>
             <p>A a short description of this feature goes here</p>
