--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,24 +26,24 @@
     </div>
 </div>
 
-<div class="container-fluid video-section" >  
+<div class="container-fluid video-section mt-5" >  
 
-            <div class="container  py-lg-5 my-lg-5">
+            <div class="container  py-lg-5 my-5">
           
-                        <div class="row  w-100 g-5">
+                        <div class="row w-100 g-md-5 g-0">
                             
                             
-                                <div class="col-md-6 col-6">
+                                <div class="col-md-6 col-12">
                                     <div class="video-wrapper background-teal-100 d-flex justify-content-center align-items-center">
                                         <a href="https://www.youtube.com/watch?v=D7ovwGioN9E" class="popup-video">{{ partial "fontawesome.html" "duotone/play" }}</a>
                                     </div>
                                     
                                 </div>
-                                <div class="video-desc col-md-6 col-6 d-flex flex-column justify-content-center">
+                                <div class="video-desc col-md-6 col-12 d-flex flex-column justify-content-center mt-md-inherit mt-md-5 mt-3">
                                     <div class="title-wrapper pb-1">
                                         <h2>How Makhno works</h2>
                                     </div> 
-                                    <div class="desc-wrapper pb-5">
+                                    <div class="desc-wrapper pb-md-5 pb-3">
                                         <p>
                                             Makhno connects from different vantage points around the world for each submitted link, so it records when content is taken down. it is a collaborative system, the more the merrier.
                                         </p>
@@ -60,13 +60,13 @@
 
             <div class="container integrations">
                 <h2 class="text-center pb-4">Integrations</h2>
-                <div class="row  w-100 g-5">
+                <div class="row  w-100 g-md-5 g-0">
                     {{ $integrations := where .Site.RegularPages "Type" "integrations"}}
                     
                     {{ range first 2 (where $integrations "Params.home" true) }}
                     {{ $name := .Params.name | lower}}
                     {{ $path := printf "%s" $name | printf "%s%s" "brands/" }}
-                        <div class="col-md-6 col-6 ">
+                        <div class="col-md-6 col-12 my-md-5 my-3 ">
 
                                 <div class="box-wrapper">
                                     <div class="icon d-flex justify-content-center align-items-center mb-4">{{ partial "fontawesome.html" $path }}</div>
@@ -91,7 +91,7 @@
 
     </div>
 
-    <div class="container-fluid" >  
+    <div class="container-md-fluid" >  
 
             {{ partial "cta.html" . }}
 
