--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,16 +4,16 @@
     <!-- Section: Logos  -->
     <section>
 
-      <div class="text-center text-md-start background-teal-900 p-sm-0">
+      <div class="text-center text-md-start background-teal-900 px-sm-5 px-3">
         <!-- Grid row -->
-        <div class="row p-5  mx-5">
+        <div class="row w-100 py-sm-5 pt-5 px-xl-5 mx-0">
           <!-- Grid column -->
-          <div class="col-md-6 col-lg-6 col-xl-6  mb-4 logos">
+          <div class="col-sm-9  col-12  mb-sm-4 mb-5 logos">
             <!-- Content -->
             <div class="row">
-              <div class="col-12 d-flex align-items-center justify-content-start">
-                <p class="mb-0 pe-5">A project by</p>
-                <img class="pe-5" src="/img/footer-logo2.svg" alt="footer logo">
+              <div class="col-12 d-flex flex-wrap align-items-center justify-content-start">
+                <p class="mb-md-0 pe-xl-5 pe-3 ">A project by</p>
+                <img class="pe-xl-5 pe-3" src="/img/footer-logo2.svg" alt="footer logo">
                 <img src="/img/footer-logo1.svg" alt="footer logo">     
               </div>
              
@@ -31,7 +31,7 @@
       <!-- Section: Socials  -->
   
     
-          <div class="col-md-6 col-lg-6 col-xl-6  mb-md-0 mb-4 d-flex justify-content-end socials">
+          <div class="col-sm-3 col-12  mb-md-0 mb-sm-4 d-flex justify-content-sm-end justify-content-start socials">
             <!-- Links -->
             {{- with .Site.Params.social }}
             {{ partial "social-icons.html" . }}
@@ -43,9 +43,9 @@
           <!-- Grid column -->
         </div>
          <!-- Copyright -->
-        <div class="row px-5 py-3 mx-5 copyright">
+        <div class="row w-100 px-xl-5 py-3 copyright">
           <div class="col-12">
-            <p class="mb-0">
+            <p class="mb-0 text-start">
               <!-- Links -->
               © {{ .Site.Params.Description }}
             </p>
