--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-md-fluid">
   <div class="container-lg background-white px-4">
     <nav class="navbar navbar-expand-lg justify-content-between align-items-center" aria-label="Main Navigation">
       <a class="navbar-brand" href="{{ .Site.BaseURL | relLangURL }}">
@@ -40,7 +40,7 @@
         <div class="container py-3">
           <div class="navbar align-items-center justify-content-between">
             <a class="brand" href="{{ .Site.BaseURL }}">
-              <img src="/img/svg/logo-white.svg" alt="Querylla logo" width="209">
+              <img src="/img/svg/logo-white.svg" alt="Makhno logo" width="209">
             </a>
             <button type="button" class="closebtn" aria-label="Toggle navigation" onclick="closeNav()"><i
                 class='fa-solid fa-xmark {{ if eq $theme "dark" }}text-white{{ else if eq $theme "light" }}text-dark{{ else }}{{ end }}'></i></button>
