Added more rules for responsivity - Homepage

--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -1,6 +1,6 @@
 <div class="container-fluid background-teal-50 d-flex justify-content-center align-items-center py-3 min-h-500"
     id="content">
-    <div class="container  pt-3 banner">
+    <div class="container-md  pt-3 banner">
         <div class="row">
 
             <div class="col-xl-9 col-lg-8 col-12 mx-auto pt-md-5">
