--- a/layouts/partials/cta.html
+++ b/layouts/partials/cta.html
@@ -1,13 +1,13 @@
-<div class="container-lg calltoaction mx-md-auto mx-0 px-md-2 px-0 pt-5 mt-lg-5">
+<div class="container-lg calltoaction mx-md-auto mx-0 px-lg-2 px-0 pt-5 mt-lg-5">
     <div class="row mx-auto justify-content-between align-items-center background-teal-100  px-md-3 px-2 py-4-5">
-        <div class="col-xl-3 col-md-3 col-12 mb-md-0 mb-md-3 py-3 ">
+        <div class="col-lg-3 col-md-4 col-12 mb-md-0 mb-md-3 py-3 ">
             <h2>Get involved!</h2>
         </div>
-        <div class="col-xl-4 col-md-3 col-12  py-md-3 ">
+        <div class="col-lg-4 col-md-4 col-12  py-md-3 ">
             <p>Interested in bringing transparency to content takedown policies? Reach out!
             </p>
         </div>
-        <div class="col-xl-5 col-md-6 col-12 py-3 d-flex justify-content-md-end justify-content-center ">
+        <div class="col-lg-5 col-md-4 col-12 py-3 d-flex justify-content-md-end justify-content-sm-start justify-content-center ">
             <a href='#' class="bnt main-bnt">Get involved!</a>
         </div>
     </div>
