--- a/layouts/partials/top-bar.html
+++ b/layouts/partials/top-bar.html
@@ -1,6 +1,6 @@
 <div id="top-bar">
-    <p class="text-center">We added support for TikTok! <a href="/announcement/">Read the Announcement</a></p>
-    <button id="close-btn" onclick="closeTopBar()">{{ partial "fontawesome.html" "light/xmark" }}</button>
+    <p class="text-sm-center text-start">We added support for TikTok! <a href="/announcement/">Read the Announcement<span class=" d-inline-block align-middle ps-1">{{ partial "fontawesome.html" "regular/arrow-right-long" }}</span></a></p>
+    <button id="close-btn" class="p-0" onclick="closeTopBar()">{{ partial "fontawesome.html" "regular/xmark" }}</button>
 </div>
   
 
