--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 {{ partial "banner.html" . }}
 
 <div class="container-fluid" >  
-    <div class="container features pb-lg-5 mb-lg-5">
+    <div class="container-md features pb-lg-5 mb-lg-5">
     <h2 class="text-center my-5">How Makhno can help</h2>
             <div class="row justify-content-between align-items-start">
                 {{ $features := where .Site.RegularPages "Type" "features"}}
@@ -28,7 +28,7 @@
 
 <div class="container-fluid video-section mt-5" >  
 
-            <div class="container  py-lg-5 my-5">
+            <div class="container-md  py-lg-5 my-5">
           
                         <div class="row w-100 g-md-5 g-0">
                             
@@ -43,7 +43,7 @@
                                     <div class="title-wrapper pb-1">
                                         <h2>How Makhno works</h2>
                                     </div> 
-                                    <div class="desc-wrapper pb-md-5 pb-3">
+                                    <div class="desc-wrapper pb-lg-5 pb-3">
                                         <p>
                                             Makhno connects from different vantage points around the world for each submitted link, so it records when content is taken down. it is a collaborative system, the more the merrier.
                                         </p>
@@ -58,18 +58,22 @@
                         
             </div>
 
-            <div class="container integrations">
+            <div class="container-md integrations">
                 <h2 class="text-center pb-4">Integrations</h2>
-                <div class="row  w-100 g-md-5 g-0">
+                <div class="row  w-100 g-md-5 g-sm-3 g-0">
                     {{ $integrations := where .Site.RegularPages "Type" "integrations"}}
                     
                     {{ range first 2 (where $integrations "Params.home" true) }}
                     {{ $name := .Params.name | lower}}
                     {{ $path := printf "%s" $name | printf "%s%s" "brands/" }}
-                        <div class="col-md-6 col-12 my-md-5 my-3 ">
+                        <div class="col-sm-6 col-12 my-md-5 my-3 ">
 
                                 <div class="box-wrapper">
-                                    <div class="icon d-flex justify-content-center align-items-center mb-4">{{ partial "fontawesome.html" $path }}</div>
+                                    <div class="icon-wrapper d-flex justify-content-between">
+                                        <div class="icon-left d-flex justify-content-center align-items-center mb-4 background-teal-50">{{ partial "fontawesome.html" $path }}</div>
+                                        <div class="icon-right d-flex justify-content-end p-0 mb-4">{{ partial "fontawesome.html" "light/arrow-up-right" }}</div>
+                                    </div>
+                                    
                                     <div class="title mb-2">{{.Params.name}}</div>
                                     <div class="desc">
                                         {{ $content := .Content }}
