--- a/layouts/404.html
+++ b/layouts/404.html
@@ -4,29 +4,33 @@
 </div>
 
 <style>
-    *{
-    transition: all 0.6s;
-}
+    * {
+        transition: all 0.6s;
+    }
 
+    .fof {
+        display: flex;
+        text-align: center;
+        height: 50vh;
+        flex-direction: column;
+        justify-content: center;
+    }
 
-.fof{
-    display: flex;
-    text-align: center;
-    height: 50vh;
-    flex-direction: column;
-    justify-content: center;
-}
+    .fof h1 {
+        font-size: 50px;
+        display: inline-block;
+        padding-right: 12px;
+        animation: type .5s alternate infinite;
+    }
 
-.fof h1{
-	  font-size: 50px;
-	  display: inline-block;
-	  padding-right: 12px;
-	  animation: type .5s alternate infinite;
-}
+    @keyframes type {
+        from {
+            box-shadow: inset -3px 0px 0px #888;
+        }
 
-@keyframes type{
-	  from{box-shadow: inset -3px 0px 0px #888;}
-	  to{box-shadow: inset -3px 0px 0px transparent;}
-}
+        to {
+            box-shadow: inset -3px 0px 0px transparent;
+        }
+    }
 </style>
 {{ end }}
