--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -1,9 +1,8 @@
-<div class="container-fluid background-teal-50 d-flex justify-content-center align-items-center py-3 min-h-500"
-    id="content">
-    <div class="container-md  pt-3 banner">
+<div class="container-fluid background-teal-50 d-flex justify-content-center align-items-center py-3 min-h-500" id="content">
+    <div class="container-md pt-3 banner">
         <div class="row">
             <div class="col-xl-9 col-lg-8 col-12 mx-auto pt-md-5">
-                <h1 id="styled-title" class="text-md-center">{{ .Params.Subtitle }}</h1>
+                <h1 id="styled-title" class="text-md-center">{{ .Params.Subtitle | safeHTML }}</h1>
             </div>
             <div class="col-xl-8 col-lg-6 col-12 mx-auto pt-3">
                 <p class="text-md-center desc">{{ .Params.Description }}</p>
@@ -13,12 +12,4 @@
             </div>
         </div>
     </div>
-
 </div>
-<script>
-    var heading = document.getElementById("styled-title");
-    var words = heading.textContent.split(" ");
-    words[0] = "<span id='first-word'>" + words[0] + "</span>";
-    words[words.length - 1] = "<span id='last-word'>" + words[words.length - 1] + "</span>";
-    heading.innerHTML = words.join(" ");
-</script>
