Added a part of the results page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -66,9 +66,7 @@
                         <h2>How Makhno works</h2>
                     </div> 
                     <div class="desc-wrapper pb-lg-5 pb-3">
-                        <p>
-                            Makhno connects from different vantage points around the world for each submitted link, so it records when content is taken down. it is a collaborative system, the more the merrier.
-                        </p>
+                        <p>Makhno connects from different vantage points around the world for each submitted link, so it records when content is taken down. it is a collaborative system, the more the merrier.</p>
                     </div>
                     <div class="link">
                         <a href="#">Methodology {{ partial "fontawesome.html" "light/arrow-right" }}</a>
