--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -664,3 +664,28 @@ dialog {
   width: 100%;
   height: 100%;
 }
+
+// Results page
+.test-results {
+  font-size: 1.25rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+#test-url {
+  font-size: 2rem;
+  color: $teal-700;
+  font-weight: 500;
+  text-decoration: underline;
+  letter-spacing: -0.025em;
+}
+
+#test-country {
+  display: inline-block;
+  color: $yellow-800;
+  background-color: $yellow-100;
+  font-weight: 500;
+  font-size: 0.95rem;
+  padding: .25rem .75rem;
+  border-radius: .5rem;
+}
