--- a/layouts/results/single.html
+++ b/layouts/results/single.html
@@ -24,15 +24,10 @@
 
     <div id="content" class="content" role="main">
         <div class="container-fluid">
-            <div class="container">
-                <div class="row justify-content-center">
+            <div class="container-lg">
+                <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-12 py-5">
-                        
-                        <article>
-                            <div class="post-content pt-4">
-                                {{ .Content }}
-                            </div>
-                        </article>
+                        test
                     </div>
                 </div>
             </div>
