--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -528,6 +528,20 @@ footer {
       color: $coolgray-500;
     }
   }
+  option {
+    width: 23%; 
+    margin: 1%;
+    float: left;
+    overflow-wrap: revert;
+    word-wrap: break-word;   
+    height: 50px;
+    white-space: pre-wrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    white-space: pre-wrap;
+    text-align: center;
+}
 
   & details {
     //...
@@ -589,6 +603,7 @@ input[type="submit"] {
   border-radius: 0.375rem;
   border: none;
   padding-block: 0.625rem;
+  padding-inline: 2rem;
   color: #78350f;
 }
 
