--- a/layouts/partials/filter-form.html
+++ b/layouts/partials/filter-form.html
@@ -1,8 +1,8 @@
 <form action="/results" class="form-filter py-md-5">
   <div class="form-row d-flex flex-wrap">
-    <div class="form-group d-flex flex-column gap-1 px-md-3 pe-sm-3 my-3 col-md-5 col-sm-6 col-12">
-      <label for="country">Country:</label>
-      <select class="px-2" id="country" name="country">
+    <div class="form-group d-flex flex-column gap-1 px-md-3 pe-sm-3 my-3 col-md-12 col-sm-12 col-12">
+      <label for="country">Countries:</label>
+      <select class=" pe-5" id="country" name="country" multiple>
         <option value="" disabled selected hidden>Select Country</option>
         <option value="AF">Afghanistan</option>
         <option value="AX">Aland Islands</option>
@@ -258,11 +258,11 @@
         <option value="ZW">Zimbabwe</option>
       </select>
     </div>
-    <div class="form-group d-flex flex-column gap-1 px-md-3 ps-sm-3 my-3 col-md-5 col-sm-6 col-12">
+    <div class="form-group d-flex flex-column gap-1 px-md-3 ps-sm-3 my-3 col-md-12 col-sm-12 col-12">
       <label for="url">URL:</label>
       <input class="px-2" type="text" id="url" name="url" placeholder="Enter the social media content URL">
     </div>
-    <div class="form-group d-flex flex-column justify-content-end my-3 px-md-3 col-md-2 col-12">
+    <div class="form-group d-flex flex-column justify-content-end my-3 px-md-3 mx-auto col-md-3 col-12">
       <input type="submit" value="Start Test">
     </div>
   </div>
@@ -290,4 +290,21 @@
       </div>
     </details>
   </div> -->
+
+
 </form>
+<script>
+  window.onmousedown = function (e) {
+    document.getElementById('country').onmousedown = function(e) {
+    e.preventDefault();
+    var st = this.scrollTop;
+    e.target.selected = !e.target.selected;
+    setTimeout(() => this.scrollTop = st, 0);
+    this.focus();
+    }
+
+    document.getElementById('country').onmousemove= function(e) {
+        e.preventDefault();
+    }
+  }
+</script>
