--- a/layouts/partials/filter-form.html
+++ b/layouts/partials/filter-form.html
@@ -2,7 +2,7 @@
   <div class="form-row d-flex flex-wrap">
     <div class="form-group d-flex flex-column gap-1 px-md-3 pe-sm-3 my-3 col-md-12 col-sm-12 col-12">
       <label for="country">Countries:</label>
-      <select class=" pe-5" id="country" name="country" multiple>
+      <select class="pe-lg-5" id="country" name="country" multiple>
         <option value="" disabled selected hidden>Select Country</option>
         <option value="AF">Afghanistan</option>
         <option value="AX">Aland Islands</option>
