--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="container-fluid">
+<div class="container-fluid background-teal-50">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-xl-10 col-lg-10 col-md-12 col-12 py-5">
