--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -528,48 +528,111 @@ footer {
       color: $coolgray-500;
     }
   }
-  option {
-    width: 23%; 
-    margin: 1%;
-    float: left;
-    height: 50px;
-    white-space: pre-wrap;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border: 1px solid $teal-400;
-    border-radius: .5rem;
-    cursor: pointer;
-    @include media-breakpoint-down(sm){
-      width: 46%;
-    }
-}
-
-  & details {
-    //...
-    & > div {
-      background: #ffffff;
-      mix-blend-mode: normal;
-      border: 1px solid $teal-600;
-      border-radius: 0.375rem;
-      padding-block: 1.125rem;
-
-      & .form-group-checkbox {
-        gap: 0.75rem;
-      }
-      & > div {
-        padding-inline: 2rem;
-
-        @include media-breakpoint-down(sm) {
-          padding-inline: 1rem;
+    
+    
+  
+    
+  
+    /*the container must be positioned relative:*/
+    .custom-select {
+      position: relative;
+        select {
+          display: none; /*hide original SELECT element:*/
+        } 
+        .select-selected {
+          background-color: $white;
+          color: $coolgray-500;
+          padding: 0.625rem 5rem 0.625rem 0.625rem;        
+          cursor: pointer;
+          user-select: none;
+          border: 1px solid #d1d5db;
+          box-shadow: 0px 1px 2px rgba(0,0,0,0.05);
+          border-radius: 0.375rem;
+          /*style the arrow inside the select element:*/
+          &:after {
+            position: absolute;
+            content: "";
+            top: calc(50% - 3px);
+            right: 10px;
+            width: 0;
+            height: 0;
+            border: 6px solid transparent;
+            border-color: $teal-900 transparent transparent transparent;
+          }
+          /*point the arrow upwards when the select box is open (active):*/
+          &.select-arrow-active{
+            border-radius: 0.375rem 0.375rem 0 0;
+            border: 2px solid $teal-700;
+            border-bottom:1px solid $coolgray-300;
+            &:after {
+              border-color: transparent transparent $teal-900 transparent;
+              top: calc(50% - 9px);
+            }
+          }
+          
         }
+       /* Add this CSS to achieve a 4-column layout */
+       .select-items {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 0 10px;
+        position: absolute;
+        background-color: $white;
+        top: 100%;
+        left: 0;
+        right: 0;
+        z-index: 99;
+        max-height: 220px;
+        overflow-y: auto;
+        border: 2px solid transparent;
+        border-color: transparent $teal-700 $teal-700 $teal-700;
+        transition: all 1.5s ease-in-out;
+        @include media-breakpoint-down (sm){
+          grid-template-columns: repeat(1, 1fr);
+        }
+        @include media-breakpoint-between(md, xl){
+          grid-template-columns: repeat(3, 1fr);
+        }
+        div {
+          width: auto;
+          padding: 8px;
+          text-align: center;
+          color: $coolgray-900;
+          padding: 8px 16px;
+          border: 1px solid transparent;
+          border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+          cursor: pointer;
+          user-select: none;
+          &:hover{
+            background-color: $teal-50;
+          }
+          &.same-as-selected{
+            background-color: $teal-100;
+          }
+        }
+        &.four-columns {
+          column-count: 4;
+          column-gap: 10px;
+          max-height: none; /* Remove the maximum height to display all items */
+        }
+        &.select-hide {
+           display: none;
+        }
+    
       }
+      span.clear-selected{
+        position: absolute;
+        right: 3.5rem;
+        top: .625rem;  
+        background: $coolgray-200;
+        line-height: 1;
+        padding: .375rem;
+        border-radius: 50%;
+        cursor: pointer;
+      }
+     
     }
-    & summary {
-      color: $teal-700;
-    }
-  }
+  
 }
 
 input[type="text"] {
@@ -578,6 +641,13 @@ input[type="text"] {
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   border-radius: 0.375rem;
   padding-block: 0.625rem;
+  &:focus{
+    outline-color:$teal-700  !important;
+    border-radius: 0.375rem;
+    -moz-outline-radius:0.675rem;
+    outline-width: 2px;
+    outline-style: solid;  
+  }
 }
 
 select#country {
@@ -598,6 +668,7 @@ select#country {
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   border-radius: 0.375rem;
   padding-block: 0.625rem;
+  
 }
 
 input[type="submit"] {
@@ -610,13 +681,6 @@ input[type="submit"] {
   color: #78350f;
 }
 
-a#advanced-options-toggle {
-  font-weight: 500;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  color: #0f766e;
-  text-decoration: none;
-}
 
 .inline-svg {
   display: inline-flex;
